# HRI

./: .gitignore  s12_go1.world  startup_Befehl_Map.md
polygon_nav/: ARCHITECTURE.md  Documentation.md  INSTALL_SPORTCLIENT.md  README.md  package.xml  ros2_architecture.gv  setup.cfg  setup.py  start_all_nodes.sh  state_machine.gv  stop_all_nodes.sh
polygon_nav/polygon_nav/: Documentation.md  follow_node.py  follower_control.py  hand_gesture_detector.py  person_position_tracker.py  polygon_nav_client.py  pose_control.py  sensor_fusion.py  sit_node.py  state_machine.py  yolo_processor.py
polygon_nav/polygon_nav/vosk_mic_listener/: config.py  mic_node.py
