<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>polygon_nav</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>rclpy</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>nav2_msgs</exec_depend>
<exec_depend>action_msgs</exec_depend>
<exec_depend>python3-shapely</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>vision_msgs</exec_depend>
<exec_depend>cv_bridge</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>tf_transformations</exec_depend>
<exec_depend>python3-ultralytics</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-torchvision</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-sounddevice</exec_depend>
  <exec_depend>python3-pyaudio</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-mediapipe</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>go1_legged_msgs</exec_depend>
  <exec_depend>unitree_legged_sdk</exec_depend>
  <exec_depend>unitree_go</exec_depend>
  <exec_depend>vosk</exec_depend>




  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
